--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -1,1 +1,2 @@
-<input placeholder="Search...">
+<!-- <input placeholder="Search..." (input)="onInput($event.target.value)"> by him -->
+<input placeholder="Search..." (input)="onInput($event.target)">
