--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,6 @@
 (submitted)="onTerm($event)"
 ></app-search-bar>
 
-<app-page-list></app-page-list>
+<app-page-list
+[pages]="pages"
+></app-page-list>
