--- a/src/app/page-list/page-list.component.html
+++ b/src/app/page-list/page-list.component.html
@@ -1,1 +1,4 @@
 <p>page-list works!</p>
+<div *ngIf="pages">length:::{{ pages?.length }}</div>
+<div>{{ pages | json}}</div>
+<!-- <div>{{ pages?.query | json }}</div> -->
