Building the Table

--- a/src/app/page-list/page-list.component.html
+++ b/src/app/page-list/page-list.component.html
@@ -1,4 +1,25 @@
-<p>page-list works!</p>
+
 <div *ngIf="pages">length:::{{ pages?.length }}</div>
-<div>{{ pages | json}}</div>
-<!-- <div>{{ pages?.query | json }}</div> -->
+
+<table class="table is-stripped">
+    <thead>
+        <tr>
+            <th>Title</th>
+            <th>Word Count</th>
+            <th>Snippet</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let page of pages">
+            <td>
+                {{ page.title }}
+            </td>
+            <td>
+                {{ page.wordcount }}
+            </td>
+            <td>
+                {{ page.snippet }}
+            </td>
+        </tr>
+    </tbody>
+</table>
