--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -1,9 +1,9 @@
 <!-- <input placeholder="Search..." (input)="onInput($event.target.value)"> by him -->
-
-<form (submit)="onFormSubmit($event)">
-    <input class="input" placeholder="Search..." (input)="onInput($event.target)"> 
-</form>
-
+<div class="box">
+    <form (submit)="onFormSubmit($event)">
+        <input class="input" placeholder="Search..." (input)="onInput($event.target)"> 
+    </form>
+</div>
 
 
 
