--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
-@import "bulma/css/bulma"
+@import "bulma/css/bulma";
+
+.searchmatch{
+    font-weight: bold;
+    background-color: rgb(222, 241, 136);
+}
